--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                 <h3>CAP en Hôtellerie</h3>
                 <p class="date">Octobre 2021 - Juin 2022 | Toulouse</p>
             </div>
+            <div class="education-link">
+                <a href="documents.html" class="document-button">Consulter mes diplômes et bulletins scolaires</a>
+            </div>
         </section>
         
         <section id="skills">
